fix: align copyright year and image (#1928)

--- a/css/main.scss
+++ b/css/main.scss
@@ -384,10 +384,10 @@ pre[class=highlight] {
 
 	img {
 		width: 100px;
+	}
 
-		@media (min-width: 576px) {
-			float: right;
-		}
+	a#footer-microsoft-link {
+		display: block;
 	}
 
 	ul {
